chois-backend-core/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: chois
  labels:
    name: chois
