chois-backend-core/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chois-backend-core
  namespace: chois
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: chois-backend-core
