chois-backend-core/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chois-backend-core
  namespace: chois
spec:
  hosts:
    - "chois-backend-core.choisproject.chuyong.kr"
  gateways:
    - chois-backend-core
  http:
    - name: "default-routes"
      route:
        - destination:
            host: chois-backend-core
            port:
              number: 80
